# python-bet

./: .env.sample  .gitignore  README.md  Untitled.ipynb  get-data-betano-nba.ipynb  get-data-betano.ipynb  get-data-betsul.ipynb  get-data-betway.ipynb  get-data-bwin.ipynb  get-data-pixbet-nba.ipynb  get-data-pixbet.ipynb  get-data-sprting-bet.ipynb  get_data_esp_da_sorte.ipynb  get_data_vai_de_bet.ipynb  main.py  makefile  pyproject.toml  requirements.txt
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
app/config/: environment_variables.py
app/utils/: three_way.py  two_way.py
docs/: README.md
etc/algorithms/: find_arbitrage_opportunities_3way.py
etc/data_structures/: basic_bets.csv  three_way.py  two_way.py
