[tool.poetry]
name = "python-bet"
version = "0.1.0"
description = ""
authors = ["guimassoqueto <gui.massoqueto@gmail.com>"]
readme = "README.md"
packages = [
    {include = "*.py"},
    {include = "app/**/*.py"}
]

[tool.poetry.dependencies]
python = "3.12.2"
playwright = "^1.41.2"
selenium = "^4.18.1"
selectolax = "^0.3.20"
fake-useragent = "^1.4.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
poetry-plugin-export = "^1.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
